Fixed responsiveness issue with overflow-x: hidden

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,6 +8,10 @@ $blue: #0070C9;
   min-width: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   overflow-x: hidden;
